# image_filter

./: .gitignore  CMakeLists-working.txt  CMakeLists.txt  README.md  analyze.m  main.cpp  performance_data.csv  test_main.cpp
Docs/: Souleymane_Dembele_Programming_Project.docx
includes/utils/: ImageReader.h
src/: CMakeLists.txt  main.cpp
src/utils/: ImageReader.cpp  utils.cpp  utils.h
